Control strip: Don't rely on .userpic class to fix gap below icon
Journal styles routinely mess with that class, therefore it's not safe to use in
the controlstrip.

--- a/htdocs/stc/controlstrip.css
+++ b/htdocs/stc/controlstrip.css
@@ -58,6 +58,12 @@ html body
     text-decoration: underline;
 }
 
+/* Don't add extra height at bottom of userpic box */
+#lj_controlstrip_userpic a {
+    display: block;
+    line-height: 0;
+}
+
 #lj_controlstrip img {
     background: none;
     margin: 0;
